# TerritoryTakeover

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  KEY_FINDINGS.md  LICENSE  PHASE3_SUMMARY.md  README.md  pyproject.toml  render.yaml  vercel.json
.github/workflows/: ci.yml
benchmarks/: HARNESS_FINDINGS.md  HOTSPOTS.md  OPTIMIZATION_REPORT.md  ROLLOUT_FINDINGS.md  TUNING_FINDINGS.md  baseline.json  baseline_pre_optimization.json  bench_engine.py  bench_pipeline.py  optimized.json
benchmarks/profiles/: az_iteration_10x10.json  az_iteration_10x10.pstats  az_iteration_6x6.json  az_iteration_6x6.pstats  rollout_10.json  rollout_10.pstats  rollout_20.json  rollout_20.pstats  rollout_40.json  rollout_40.pstats  uct_10_200.json  uct_10_200.pstats  uct_20_100.json  uct_20_100.pstats
configs/: bench_alphazero_10x10_phase3d_like.yaml  bench_alphazero_6x6_phase3d_like.yaml  phase2_tournament.yaml  phase3a_tabular_10x10_4p.yaml  phase3a_tabular_8x8_2p.yaml  phase3c_alphazero_8x8_2p.yaml  phase3c_alphazero_nstep_smoke.yaml  phase3c_alphazero_smoke.yaml  phase3d_curriculum.yaml  phase3d_curriculum_fast.yaml  phase3d_direct.yaml  phase3d_direct_fast.yaml  phase3d_elo_pool.yaml  tuned_weights.yaml
docs/: DEPLOYMENT.md  OPTIMIZATION_ANALYSIS.md  baseline_report.csv  baseline_report.md  baseline_report_20x20.csv  baseline_report_20x20.md  curriculum_puct_scaling.csv  curriculum_puct_scaling.md
docs/00-overview/: DOCUMENTATION_INDEX.md  PROJECT_SNAPSHOT.md  README.md
docs/01-product/: CURRENT_BEHAVIOR.md  FEATURE_INVENTORY.md  PRODUCT_BRIEF.md  USER_FLOWS.md
docs/02-architecture/: ARCHITECTURE.md  DATA_MODEL.md  INTEGRATIONS.md  PUBLIC_API.md  STATE_AND_ENCODING.md  SYSTEM_MAP.md
docs/03-implementation/: CODEBASE_INVENTORY.md  CONFIG_AND_ENVIRONMENT.md  ENTRYPOINTS_AND_SCRIPTS.md  TESTING_STRATEGY.md
docs/04-quality/: KNOWN_ISSUES.md  REGRESSION_CHECKLIST.md  RISK_REGISTER.md  SECURITY_AND_PRIVACY_NOTES.md  TECHNICAL_DEBT.md
docs/05-planning/: BACKLOG.md  NEXT_AGENT_TASKS.md  PRIORITIZED_TODO.md  ROADMAP.md
docs/06-history/: AUDIT_LOG.md  CHANGELOG_NOTES.md  DECISION_LOG.md
docs/06-history/archive/: ARCHIVE_NOTES.md  KEY_FINDINGS.md
docs/07-ai-context/: AGENT_WORKFLOW.md  CONTEXT_LOADING_PROTOCOL.md
docs/08-visuals/: FLOW_DIAGRAMS.md  SCREENSHOT_MANIFEST.md  VISUAL_REGRESSION_PLAN.md
docs/08-visuals/screenshots/: replay_rave_vs_greedy_10x10.html  sample_board_ascii.txt
docs/adr/: ADR-001-int8-grid-encoding.md  ADR-002-state-split.md  ADR-003-enclosure-bfs.md  ADR-004-value-target.md  ADR-005-alphazero-gating.md  ADR-006-seedsequence-reproducibility.md  README.md
docs/assets/: best_agent_demo.html
docs/experiments/: 20x20_hypothesis_test.md
docs/optimization_analysis/: 01_cost_breakdown.md  02_reward_design.md  03_strategy_comparison.md  04_experiment_plan.md
docs/phase3a/: 10x10_4p_seed0_eval_curves.csv  10x10_4p_seed0_summary.yaml  8x8_2p_seed0_eval_curves.csv  8x8_2p_seed0_summary.yaml
docs/phase3d/: ablation_raw.csv  ablation_summary.json  elo_final.csv  net_reference.pt  reference_config.yaml
experiments/: curriculum_ablation.py
portfolio-readiness-audit/: 01-executive-summary.md  04-prioritized-roadmap.md
public/: index.html
public/games/: four-player-ffa.html  greedy-vs-random.html  rave-mirror.html  rave-vs-greedy.html
results/tuning_first_run/: stage_a.jsonl  stage_b.jsonl
scripts/: build_site.py  compute_elo.py  eval_alphazero.py  eval_corrected_rules.py  eval_tabular_q.py  play_interactive.py  record_agent_gallery.py  record_demo.py  record_html_demo.py  record_mcts_scaling.py  record_territory_growth.py  render_h2h_heatmap.py  run_baseline_report.py  run_puct_scaling.py  run_tournament.py  serve_live_demo.py  train_alphazero.py  train_curriculum.py  train_tabular_q.py  tune_weights.py
src/territory_takeover/: __init__.py  actions.py  constants.py  engine.py  gym_env.py  rollout.py  state.py  viz.py  viz_html.py  viz_interactive.py  viz_live.py
src/territory_takeover/eval/: __init__.py  features.py  heuristic.py  tuning.py  voronoi.py
src/territory_takeover/rl/: __init__.py
src/territory_takeover/search/: agent.py  (+5 more)
tests/: test_actions.py  test_baseline_report.py  test_enclosure.py  test_engine.py  test_engine_equivalence.py  test_eval_features.py  test_eval_heuristic.py  test_gym_env.py  test_harness.py  test_liveness.py  test_mcts_node.py  test_mcts_progressive_widening.py  test_mcts_rave.py  test_mcts_rollouts.py  test_mcts_uct.py  test_puct_scaling.py  test_record_demo.py  test_rl_alphazero_evaluator.py  test_rl_alphazero_mcts.py  test_rl_alphazero_network.py  test_rl_alphazero_network_variable_size.py  test_rl_alphazero_nstep_target.py  test_rl_alphazero_replay.py  test_rl_alphazero_spaces.py  test_rl_alphazero_train_smoke.py  test_rl_curriculum_schedule.py  test_rl_curriculum_trainer_smoke.py  test_rl_curriculum_transfer.py  test_rl_eval_elo.py  test_rl_ppo_core.py  test_rl_ppo_network.py  test_rl_ppo_spaces.py  test_rl_ppo_vec_env.py  test_rl_tabular_q_agent.py  test_rl_tabular_reward.py  test_rl_tabular_state_encoder.py  test_rl_tabular_train_smoke.py  test_rollout_api.py  test_search_agents.py  test_search_maxn.py  (+7 more)
(+35 files in other folders)
