[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "territory_takeover"
version = "0.1.0"
description = "Grid-based territory capture game engine."
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
gym = ["gymnasium>=0.29"]
viz = ["matplotlib>=3.7", "pillow>=10"]
tournament = ["pyyaml>=6"]
rl = ["pyyaml>=6", "matplotlib>=3.7", "tensorboardX>=2.6"]
rl_deep = [
    "pyyaml>=6",
    "matplotlib>=3.7",
    "tensorboardX>=2.6",
    "torch>=2.2",
    "gymnasium>=0.29",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "gymnasium>=0.29",
    "matplotlib>=3.7",
    "pillow>=10",
    "pyyaml>=6",
    "tensorboardX>=2.6",
    "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF", "ANN", "TID"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gymnasium.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "PIL.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "benchmarks.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["yaml.*", "tensorboardX.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
